traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:4: error: ':' expected but ')' found.
def aCrois(a):Boolean={
            ^TraversalZigZag:39: error: identifier expected but '}' found.
}
^